--- a/css/cat.css
+++ b/css/cat.css
@@ -21,7 +21,7 @@
 
 /* Controls Formatting */
 .cat-wrap .cat-controls{
-  background:#fed976;
+  background:#99badd;
   margin: .5em;
   padding:.5em;
   border:1px solid #999;
@@ -30,6 +30,15 @@
 
 .cat-wrap .cat-controls.hidden{
   display:none;
+}
+
+.cat-wrap .cat-controls h2{
+  margin-top:0.1em;
+  margin-bottom:0.1em;
+}
+
+.cat-wrap .cat-controls h3{
+  margin-bottom:0;
 }
 
 .cat-wrap .cat-controls div{
@@ -60,6 +69,12 @@
 /* json-schema form formatting */
 .help-inline{
   font-size:0.7em;
-  color:#666;
+  color:#fff;
   display:block;
+}
+
+.help-block{
+  color:red;
+  display:block;
+
 }
