remove export button. add 'view source' option in log

--- a/css/cat.css
+++ b/css/cat.css
@@ -100,3 +100,14 @@
   background-color: white;
   border-color: black;
 }
+
+.cat-wrap .cat-chart .status div.export{
+  font-size:0.6em;
+  color: black;
+  background-color: #ffffe5;
+  border-color: black;
+}
+
+.cat-wrap .cat-chart .status div.export.minimized{
+  font-size:1.0em;
+}
