--- a/css/cat.css
+++ b/css/cat.css
@@ -120,3 +120,77 @@
 .cat-wrap .cat-chart .status div.export.minimized{
   font-size:1.0em;
 }
+
+.cat-wrap .environment-section ul{
+  list-style: none;
+  padding-left: 0.1em;
+}
+
+.cat-wrap .environment-section ul h5{
+  margin:0;
+}
+/**********************************************************************
+** Sliders from https://www.w3schools.com/howto/howto_css_switch.asp **
+**********************************************************************/
+/**/
+.switch {
+  margin-left:0.5em;
+  position: relative;
+  display: inline-block;
+  width: 30px;
+  height: 17px;
+}
+.switch.hidden {
+  display: none;
+}
+
+/* Hide default HTML checkbox */
+.switch input {display:none;}
+
+/* The slider */
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 13px;
+  width: 13px;
+  left: 2px;
+  bottom: 2px;
+  background-color: white;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+input:checked + .slider {
+  background-color: #2196F3;
+}
+
+input:focus + .slider {
+  box-shadow: 0 0 1px #2196F3;
+}
+
+input:checked + .slider:before {
+  -webkit-transform: translateX(13px);
+  -ms-transform: translateX(13px);
+  transform: translateX(13px);
+}
+
+/* Rounded sliders */
+.slider.round {
+  border-radius: 17px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
+}
