--- a/css/cat.css
+++ b/css/cat.css
@@ -1,72 +1,92 @@
 /* general */
 .hidden{
-  display:none
+    display:none
 }
 
 .cat-wrap .cat-controls{
-  width:20%;
-  top: 0;
-  bottom:0;
-  position:fixed;
-  overflow-y:scroll;
-  overflow-x:scroll;
-  background:#99badd;
-  padding:0.5em;
-  margin:0;
-
-  border:1px solid #999;
+    position: relatvie;
+    width:20%;
+    top: 0;
+    bottom:0;
+    position:fixed;
+    overflow-y:scroll;
+    overflow-x:scroll;
+    background:#99badd;
+    padding:0.5em;
+    margin:0;
+    border:1px solid #999;
 }
 
 .cat-wrap .cat-chart, .cat-wrap .cat-data{
-  margin-left:20%;
-  padding-left: 3em;
+    margin-left:20%;
+    padding-left: 3em;
 }
 
 .cat-wrap .cat-controls.hidden{
-  display:none;
+    display:none;
 }
 
 .cat-wrap .cat-controls h2{
-  margin-top:0.1em;
-  margin-bottom:0.2em;
-  font-size:1.3em;
+    margin-top:0.1em;
+    margin-bottom:0.2em;
+    font-size:1.3em;
 }
 
 .cat-wrap .cat-controls h3{
-  margin-bottom:0;
-  margin-top:0.2em;
+    margin-bottom:0;
+    margin-top:0.2em;
 }
 
 .cat-wrap .cat-controls div{
-  margin-bottom:.5em;
+    margin-bottom:.5em;
 }
 
+.cat-wrap .submit-section {
+    display: inline-block;
+    width: 100%;
+    position: relative;
+}
+.cat-wrap .cat-button {
+    position: absolute;
+    left: 0;
+    top: 5px;
+    vertical-align: middle;
+    display: inline-block;
+    background: white;
+    cursor: pointer;
+    padding: 0 5px;
+    font-size:1em;
+    border:2px solid #7BAFD4;
+    border-radius: 2px;
+}
+.cat-wrap .cat-button--maximize {
+    left: .75em;
+    top: 11px;
+}
 .cat-wrap .cat-controls button.submit{
-  cursor: pointer;
-  margin: auto;
-
-  display:block;
-  width: 50%;
-  color:black;
-  border:none;
-  border-radius:3px;
-  padding:0.5em;
-  font-size:1em;
-  background-color:white;
-  border:2px solid #7BAFD4;
+    cursor: pointer;
+    margin: 0 auto;
+    display:block;
+    color:black;
+    border:none;
+    border-radius:3px;
+    padding: 5px 10px;
+    font-size:1em;
+    background-color:white;
+    border:2px solid #7BAFD4;
 }
 
 .cat-wrap .cat-controls button.submit:hover{
-  background-color:#7BAFD4;
-  color:white;
+    background-color:#7BAFD4;
+    color:white;
 }
 
 .cat-wrap .cat-controls .file-load-input{
-  width:75%
+    width:75%
 }
 
 .cat-wrap .cat-controls .file-load-button{
-  width:25%
+    width:25%
 }
 
 
@@ -78,8 +98,8 @@
     width: 100%;
 }
 .cat-wrap .cat-controls .settings-section .prop-value{
-  vertical-align:top;
-  padding-bottom:0.1em;
+    vertical-align:top;
+    padding-bottom:0.1em;
 }
 
 
@@ -87,63 +107,63 @@
 
 /* status formatting */
 .cat-wrap .cat-chart .status div{
-  padding: 3px;
-  margin-bottom: 4px;
-  border: 1px solid transparent;
-  border-radius: 4px;
-  color: #3c763d;
-  background-color: #dff0d8;
-  border-color: #d6e9c6;
+    padding: 3px;
+    margin-bottom: 4px;
+    border: 1px solid transparent;
+    border-radius: 4px;
+    color: #3c763d;
+    background-color: #dff0d8;
+    border-color: #d6e9c6;
 }
 .cat-wrap .cat-chart .status{
-  padding-bottom:.5em;
-  margin-bottom:.5em;
-  border-bottom:1px dotted #999;
+    padding-bottom:.5em;
+    margin-bottom:.5em;
+    border-bottom:1px dotted #999;
 }
 .cat-wrap .cat-chart .status div.error{
-  color: #a94442;
+    color: #a94442;
     background-color: #f2dede;
     border-color: #ebccd1;
 }
 
 .cat-wrap .cat-chart .status div.info{
-  color: black;
-  background-color: white;
-  border-color: black;
+    color: black;
+    background-color: white;
+    border-color: black;
 }
 
 .cat-wrap .cat-chart .status div.export{
-  font-size:0.6em;
-  color: black;
-  background-color: #ffffe5;
-  border-color: black;
+    font-size:0.6em;
+    color: black;
+    background-color: #ffffe5;
+    border-color: black;
 }
 
 .cat-wrap .cat-chart .status div.export.minimized{
-  font-size:1.0em;
+    font-size:1.0em;
 }
 
 .cat-wrap .environment-section ul{
-  list-style: none;
-  padding-left: 0.1em;
+    list-style: none;
+    padding-left: 0.1em;
 }
 
 .cat-wrap .environment-section ul h5{
-  margin:0;
+    margin:0;
 }
 /**********************************************************************
 ** Sliders from https://www.w3schools.com/howto/howto_css_switch.asp **
 **********************************************************************/
 /**/
 .switch {
-  margin-left:0.5em;
-  position: relative;
-  display: inline-block;
-  width: 30px;
-  height: 17px;
+    margin-left:0.5em;
+    position: relative;
+    display: inline-block;
+    width: 30px;
+    height: 17px;
 }
 .switch.hidden {
-  display: none;
+    display: none;
 }
 
 /* Hide default HTML checkbox */
@@ -151,48 +171,48 @@
 
 /* The slider */
 .slider {
-  position: absolute;
-  cursor: pointer;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: #ccc;
-  -webkit-transition: .4s;
-  transition: .4s;
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    -webkit-transition: .4s;
+    transition: .4s;
 }
 
 .slider:before {
-  position: absolute;
-  content: "";
-  height: 13px;
-  width: 13px;
-  left: 2px;
-  bottom: 2px;
-  background-color: white;
-  -webkit-transition: .4s;
-  transition: .4s;
+    position: absolute;
+    content: "";
+    height: 13px;
+    width: 13px;
+    left: 2px;
+    bottom: 2px;
+    background-color: white;
+    -webkit-transition: .4s;
+    transition: .4s;
 }
 
 input:checked + .slider {
-  background-color: #2196F3;
+    background-color: #2196F3;
 }
 
 input:focus + .slider {
-  box-shadow: 0 0 1px #2196F3;
+    box-shadow: 0 0 1px #2196F3;
 }
 
 input:checked + .slider:before {
-  -webkit-transform: translateX(13px);
-  -ms-transform: translateX(13px);
-  transform: translateX(13px);
+    -webkit-transform: translateX(13px);
+    -ms-transform: translateX(13px);
+    transform: translateX(13px);
 }
 
 /* Rounded sliders */
 .slider.round {
-  border-radius: 17px;
+    border-radius: 17px;
 }
 
 .slider.round:before {
-  border-radius: 50%;
+    border-radius: 50%;
 }
