--- a/css/cat.css
+++ b/css/cat.css
@@ -19,7 +19,7 @@
 
 .cat-wrap .cat-chart, .cat-wrap .cat-data{
     margin-left:20%;
-    padding-left: 3em;
+    padding: 0 3em;
 }
 
 .cat-wrap .cat-controls.hidden{
@@ -60,7 +60,7 @@
 }
 .cat-wrap .cat-button--maximize {
     left: .75em;
-    top: 11px;
+    top: 10px;
 }
 .cat-wrap .cat-controls button.submit{
     cursor: pointer;
