refactor url parse method and add link generator. slightly buggy still. #80 #79

--- a/css/cat.css
+++ b/css/cat.css
@@ -80,6 +80,17 @@
     color:white;
 }
 
+.cat-wrap .cat-controls .submit-section div.permalink-wrap{
+    font-size:0.7em;
+    width:100%;
+    text-align:center;
+}
+
+.cat-wrap .cat-controls .submit-section div.permalink-wrap *{
+    padding-right:0.5em;
+    text-decoration: none;
+}
+
 .cat-wrap .cat-controls .file-load-input{
     width:75%
 }
